--- a/node_taller/new-employee.html
+++ b/node_taller/new-employee.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/new-user.js"></script>
+    <script src="">"js/new-employee.js"</script>
     <title>New Employee</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                     <li><a href="admin.html" class="nav-link px-2 text-secondary" style="font-size: 30px;">Home</a></li>
                 </ul>
                 <div class="text-end">
-                    <button type="button" class="btn btn-danger" id="back" style="width: 80px;">Back</button>
+                    <button type="button" class="btn btn-danger" id="back" style="width: 80px;">Atrás</button>
                 </div>
             </div>
         </div>
@@ -30,15 +30,15 @@
         <div class="row g-3">
             <div class="col-md-6">
               <label for="inputName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="input-name" placeholder="Robert" required>
+              <input type="text" class="form-control" id="input-name" placeholder="Jesus" required>
             </div>
             <div class="col-md-6">
               <label for="inputLastNames" class="form-label">Last Names</label>
-              <input type="text" class="form-control" id="input-last-names" placeholder="Garza Jackson" required>
+              <input type="text" class="form-control" id="input-last-name" placeholder="Garcia Santiago" required>
             </div>
             <div class="col-6">
               <label for="inputEmail" class="form-label">Email</label>
-              <input type="text" class="form-control" id="input-email" placeholder="example@domain.ext" required>
+              <input type="text" class="form-control" id="input-mail" placeholder="example@domain.ext" required>
             </div>
             <div class="col-md-3">
               <label for="inputPassword" class="form-label">Password</label>
@@ -46,14 +46,14 @@
             </div>
             <div class="col-md-3">
                 <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="input-phone-number" placeholder="442-423-6496">
+                <input type="text" class="form-control" id="input-phone" placeholder="4411071968">
             </div>
             <div class="col-12">
                 <label for="inputAddress" class="form-label">Address</label>
                 <textarea class="form-control" id="input-address" rows="2" style="resize: none;" placeholder="Apartment, studio, or floor"></textarea>
             </div>
             <div class="col-12 p-4" style="text-align: center;">
-              <button type="submit" class="btn btn-primary" id="register" style="width: 150px; height: 40px;">Sign in</button>
+              <button type="submit" class="btn btn-primary" id="register" style="width: 150px; height: 40px;">Registrar</button>
             </div>
         </div>
     </div>
