--- a/node_taller/new-employee.html
+++ b/node_taller/new-employee.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="">"js/new-employee.js"</script>
+    <script src="js/new-employee.js"></script>
     <title>New Employee</title>
 </head>
 <body>
@@ -40,10 +40,7 @@
               <label for="inputEmail" class="form-label">Email</label>
               <input type="text" class="form-control" id="input-mail" placeholder="example@domain.ext" required>
             </div>
-            <div class="col-md-3">
-              <label for="inputPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="input-password" placeholder="************" required>
-            </div>
+        
             <div class="col-md-3">
                 <label for="inputPhoneNumber" class="form-label">Phone Number</label>
                 <input type="text" class="form-control" id="input-phone" placeholder="4411071968">
