--- a/node_taller/admin.html
+++ b/node_taller/admin.html
@@ -1,46 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/1e2e90eedd.js" crossorigin="anonymous"></script>
 
     <script src="js/admin.js"></script>
     <title>Employees</title>
-</head>
-<body>
-    <header class="p-3 text-bg-dark">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="admin.html" class="nav-link px-2 text-secondary" style="font-size: 30px;">Home</a></li>
-                    <li><a href="search.html" class="nav-link px-2 text-white" style="font-size: 15px; margin-left: 30px; padding-top: 22px;">Search Employees</a></li>
-                </ul>
+    <style>
+        body {
+            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
+        .header {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 15px 0;
+        }
+
+        .header .nav-link {
+            color: #ffffff;
+            font-size: 1rem;
+        }
+
+        .header .btn {
+            margin-left: 10px;
+        }
+
+        .header .btn-warning {
+            background-color: #ffc107;
+            border-color: #ffc107;
+        }
+
+        .header .btn-warning:hover {
+            background-color: #e0a800;
+            border-color: #d39e00;
+        }
+
+        .header .btn-danger {
+            background-color: #dc3545;
+            border-color: #dc3545;
+        }
+
+        .header .btn-danger:hover {
+            background-color: #c82333;
+            border-color: #bd2130;
+        }
+
+        .container {
+            max-width: 1200px;
+        }
+
+        .table {
+            margin-top: 20px;
+            background-color: #ffffff;
+            border-radius: 0.375rem;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .table thead {
+            background-color: #007bff;
+            color: #ffffff;
+        }
+
+        .table th,
+        .table td {
+            vertical-align: middle;
+        }
+
+        .table-hover tbody tr:hover {
+            background-color: #e9ecef;
+        }
+    </style>
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="admin.html" class="nav-link px-2">Home</a></li>
+                    <li><a href="search.html" class="nav-link px-2">Search Employees</a></li>
+                </ul>
                 <div class="text-end">
-                    <button type="button" class="btn btn-warning" id="new-user" style="margin-right: 10px;">New employee</button>
-                    <button type="button" class="btn btn-danger" id="log-out" style="margin-left: 20px;">Log out</button>
+                    <button type="button" class="btn btn-warning" id="new-user">New Employee</button>
+                    <button type="button" class="btn btn-danger" id="log-out">Log Out</button>
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="container">
-        <div class="m-4" style="height: 100%;">
-            <div class="col-md-7" style="width: 100%;">
-                <div class="table-responsive tabla">
-                    <table class="table table-info table-hover" style="text-align: center;" id="table">
-                    </table>
-                </div> 
-            </div>
+    <div class="container my-4">
+        <div class="table-responsive">
+            <table class="table table-hover" id="table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>Address</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
         </div>
     </div>
 </body>
+
 </html>
