--- a/node_taller/update.html
+++ b/node_taller/update.html
@@ -1,66 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/edit.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script>
+    <script src="js/update.js"></script>
     <title>Update Employee</title>
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .header {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+        }
+
+        .header .nav-link {
+            color: white;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .form-control {
+            border-radius: 0.375rem;
+            box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
+        }
+
+        .btn-danger {
+            background-color: #dc3545;
+            border-color: #dc3545;
+        }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+            border-color: #bd2130;
+        }
+    </style>
 </head>
+
 <body>
-    <header class="p-3 text-bg-dark">
+    <header class="header">
         <div class="container">
-          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-              <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> -->
-            </a>
-    
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="admin.html" class="nav-link px-2 text-secondary" style="font-size: 30px;">Home</a></li>
-            </ul>
-    
-            <div class="text-end">
-                <button type="button" class="btn btn-danger" id="back">Back</button>
+            <div class="d-flex justify-content-between align-items-center">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> -->
+                </a>
+
+                <ul class="nav mb-2 mb-lg-0">
+                    <li><a href="admin.html" class="nav-link px-2 text-white">Home</a></li>
+                </ul>
+
+                <div class="text-end">
+                    <button type="button" class="btn btn-danger" id="back">Back</button>
+                </div>
             </div>
-          </div>
         </div>
     </header>
 
-    <div class="p-5 m-0 border-0">
-        <div class="row g-3">
-            <div class="col-md-6">
-              <label for="inputName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="input-name" placeholder="Robert" required>
-            </div>
-            <div class="col-md-6">
-              <label for="inputLastNames" class="form-label">Last Names</label>
-              <input type="text" class="form-control" id="input-last-names" placeholder="Garza Jackson" required>
-            </div>
-            <div class="col-6">
-              <label for="inputEmail" class="form-label">Email</label>
-              <input type="text" class="form-control" id="input-email" placeholder="example@domain.ext" required>
-            </div>
-            <div class="col-md-3">
-              <label for="inputPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="input-password" placeholder="************" required>
-            </div>
-            <div class="col-md-3">
-                <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="input-phone-number" placeholder="442-423-6496">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress" class="form-label">Address</label>
-                <textarea class="form-control" id="input-address" rows="2" style="resize: none;" placeholder="Apartment, studio, or floor"></textarea>
-            </div>
-            <div class="col-12 p-4" style="text-align: center;">
-              <button type="submit" class="btn btn-primary" id="update" style="width: 150px; height: 40px;">Update</button>
+    <div class="container p-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title mb-4">Update Employee</h5>
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <label for="input-name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="input-name" placeholder="Jesus" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="input-last-name" class="form-label">Last Names</label>
+                            <input type="text" class="form-control" id="input-last-name" placeholder="Garcia Santiago"
+                                required>
+                        </div>
+                        <div class="col-12">
+                            <label for="input-mail" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="input-mail" placeholder="example@domain.ext"
+                                required>
+                        </div>
+                        <div class="col-md-4">
+                            <label for="input-phone" class="form-label">Phone Number</label>
+                            <input type="text" class="form-control" id="input-phone" placeholder="4411071968">
+                        </div>
+                        <div class="col-12">
+                            <label for="input-address" class="form-label">Address</label>
+                            <textarea class="form-control" id="input-address" rows="3" placeholder="Apartment, studio, or floor"></textarea>
+                        </div>
+                        <div class="col-12 text-center mt-4">
+                            <button type="button" class="btn btn-primary" id="update" style="width: 150px; height: 40px;">Update</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </body>
+
 </html>
